fix messages styles from templates

--- a/arc_manager/templates/auth/base_auth.html
+++ b/arc_manager/templates/auth/base_auth.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{% block title %}ARCH MANAGER{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="{% static 'plugins/material/css/materialdesignicons.min.css' %}" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.2.96/css/materialdesignicons.min.css">
     <link href="{% static 'css/auth.css' %}" rel="stylesheet" />
     <link href="{% static 'images/favicon.png' %}" rel="shortcut icon" />
     {% block extra_head %}{% endblock %}
