--- a/arc_manager/templates/auth/password_reset.html
+++ b/arc_manager/templates/auth/password_reset.html
@@ -9,9 +9,11 @@
     
     {% if messages %}
         {% for message in messages %}
-            <div class="reset-info-box" role="alert">
-                {{ message }}
-            </div>
+            {% if 'password_reset' in message.tags %}
+                <div class="alert alert-info" role="alert">
+                    {{ message }}
+                </div>
+            {% endif %}
         {% endfor %}
     {% endif %}
     
