--- a/arc_manager/templates/includes/sidebar.html
+++ b/arc_manager/templates/includes/sidebar.html
@@ -45,9 +45,9 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if 'configuracion' in request.path %}active{% endif %}" href="#">
+                <a class="nav-link {% if 'organizations' in request.path %}active{% endif %}" href="{% url 'orgs:list' %}">
                     <i class="bi bi-gear me-2"></i>
-                    Configuración
+                    Organizaciones
                 </a>
             </li>
         </ul>
