--- a/arc_manager/templates/includes/sidebar.html
+++ b/arc_manager/templates/includes/sidebar.html
@@ -39,8 +39,8 @@
         </h6>
         <ul class="nav flex-column mb-2">
             <li class="nav-item">
-                <a class="nav-link {% if 'usuarios' in request.path %}active{% endif %}" href="#">
-                    <i class="bi bi-person me-2"></i>
+                <a class="nav-link {% if 'users' in request.path %}active{% endif %}" href="{% url 'users:list' %}">
+                    <i class="bi bi-people me-2"></i>
                     Usuarios
                 </a>
             </li>
