add create users

--- a/arc_manager/templates/orgs/organization_form.html
+++ b/arc_manager/templates/orgs/organization_form.html
@@ -106,7 +106,7 @@
                                         </div>
                                     {% endif %}
                                     <small class="form-text text-muted">
-                                        Número máximo de usuarios que pueden pertenecer a esta organización
+                                        Número máximo de usuarios (activos e inactivos) que pueden pertenecer a esta organización
                                     </small>
                                 </div>
 
