--- a/arc_manager/templates/base.html
+++ b/arc_manager/templates/base.html
@@ -36,6 +36,16 @@
                     
                     <!-- Contenido principal -->
                     <main class="col-md-9 col-lg-10 ms-sm-auto px-md-4">
+                        <!-- Mensajes del sistema -->
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="alert alert-{{ message.tags }} alert-dismissible fade show mt-3" role="alert">
+                                    {{ message }}
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                        
                         {% block content %}
                         <!-- El contenido específico de cada página irá aquí -->
                         {% endblock %}
